--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>IngageDirectory</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8" />
+    <title>Ingagers</title>
+    <base href="/" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/images/cropped-Arrow-Favicon-01-32x32.png" />
+
+    <base href="/">
+    <link rel="stylesheet" href="https://use.typekit.net/zde3qoa.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab:300,400&display=swap" rel="stylesheet">
+
+
+    <meta name="google-signin-client_id"
+        content="176769310679-t71a2k2il0ji1lm35srbrdieu6fnuoh5.apps.googleusercontent.com">
+
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+
 </html>
+
+
+<!-- 
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at http://angular.io/license
+-->
