add hbdi scores to employee details

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/zde3qoa.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab:300,400&display=swap" rel="stylesheet">
 
-
+    <!-- 
     <meta name="google-signin-client_id"
-        content="176769310679-t71a2k2il0ji1lm35srbrdieu6fnuoh5.apps.googleusercontent.com">
+        content="176769310679-t71a2k2il0ji1lm35srbrdieu6fnuoh5.apps.googleusercontent.com"> -->
 
 </head>
 
