--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/x-icon" href="assets/images/cropped-Arrow-Favicon-01-32x32.png" />
 
     <base href="/">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/zde3qoa.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab:300,400&display=swap" rel="stylesheet">
 
@@ -17,6 +19,10 @@
 
 <body>
     <app-root></app-root>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
